infra/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Asigură-te că folosești HTTP dacă serverul rulează cu --insecure
spec:
  ingressClassName: nginx
  tls:
    - hosts: [argocd.icode.mywire.org]
      secretName: argocd-tls-cert
  rules:
    - host: argocd.icode.mywire.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server   # nu argo-cd-argocd-server
                port:
                  name: https
                  # number: 80          # nu 443 — server e --insecure
